# image-embedding-inference

./: .dockerignore  Dockerfile  README.md  pyproject.toml  server.py
examples/: request_example.py  request_example_batch.py  request_example_concurrent.py
